Closed Bug 198009 Opened 23 years ago Closed 23 years ago

border broken with negative margin

Categories

(Core :: CSS Parsing and Computation, defect)

x86
Linux
defect
Not set
normal

Tracking

()

VERIFIED FIXED

People

(Reporter: 3.14, Assigned: bernd_mozilla)

References

()

Details

(Keywords: regression)

Attachments

(1 file)

Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.4a) Gecko/2003031714 Look at the URL above there is a little box on the right. The border is broken. It used to work, so it is a recent regression. The page validates. pi
This works in 2003-03-10-08 and does not in 2003-03-11-08. Looks like a regression from bug 86249. If you look at the frame sizes (with DOM Inspector), the <tbody> overflows the <table> (so the inner frame overflows the outer frame). Almost looks like something somewhere blindly adds the margin-right to get a width... and if margin-right is negative, this does the wrong thing.
Attached patch patchSplinter Review
taking
Assignee: dbaron → bernd_mozilla
Attachment #117738 - Flags: superreview?(bzbarsky)
Attachment #117738 - Flags: review?(jkeiser)
Comment on attachment 117738 [details] [diff] [review] patch >+ // one can retrieve them from the frames see bug 197581 Put parens around "see bug 197581", ok? ;) You need a |break;| in the NS_SIDE_LEFT case. >+ case NS_SIDE_BOTTOM: >+ aMet.mOverflowArea.x = PR_MIN(PR_MIN(0, aCaptionMarginNoAuto.left), aInnerMarginNoAuto.left); >+ aMet.mOverflowArea.width = aMet.width - aMet.mOverflowArea.x - >+ PR_MIN(PR_MIN(0, aCaptionMarginNoAuto.right), aInnerMarginNoAuto.right); >+ aMet.mOverflowArea.y = PR_MIN(0, aInnerMarginNoAuto.top); >+ aMet.mOverflowArea.height = aMet.height - aMet.mOverflowArea.y - >+ PR_MIN(0, aCaptionMarginNoAuto.bottom); weird indentation in this and the following two cases (TOP and default). With those fixed, r+sr=bzbarsky
Attachment #117738 - Flags: superreview?(bzbarsky)
Attachment #117738 - Flags: superreview+
Attachment #117738 - Flags: review?(jkeiser)
Attachment #117738 - Flags: review+
fix checked in
Status: NEW → RESOLVED
Closed: 23 years ago
Resolution: --- → FIXED
Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.4a) Gecko/20030331 Now it works again. pi
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: