compute margin based overflow area for innertable and caption frame bug 198009 r/sr=bzbarsky